--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -6,7 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-  color:black
+  color:black;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -30,5 +30,11 @@ body {
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@layer base {
+  main {
+    color: black
   }
 }
